--- a/src/components/DetailsArtifacts/detailsArtifacts.scss
+++ b/src/components/DetailsArtifacts/detailsArtifacts.scss
@@ -47,8 +47,4 @@
     width: 100%;
     cursor: pointer;
   }
-
-  .accordion__container.open {
-    box-shadow: $previewBoxShadow;
-  }
 }
